# ExParser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: Makefile  exparser_example_1.c  exparser_example_2.c  exparser_shell.c  exparser_tests.c
include/: exparser.h
src/analysis/: ep_analysis.h  ep_analysis_get_complementary_brace.c  ep_analysis_get_invert.c  ep_analysis_is_brace_pair.c  ep_analysis_is_closing_brace.c  ep_analysis_is_function_char.c  ep_analysis_is_imag_unit.c  ep_analysis_is_in_functionlist.c  ep_analysis_is_invert.c  ep_analysis_is_numeric.c  ep_analysis_is_opening_brace.c  ep_analysis_is_string_balanced.c  ep_analysis_is_variable_char.c
src/expression/: ep_expression.h  ep_expression_assign_node.c  ep_expression_compile.c  ep_expression_create.c  ep_expression_def.h  ep_expression_delete.c  ep_expression_duplicate.c  ep_expression_eval_complex.c  ep_expression_eval_real.c  ep_expression_replace_complex_variable.c  ep_expression_replace_real_variable.c
src/functions/: ep_functions.h  ep_functions_and.c  ep_functions_cadd.c  ep_functions_cdiv.c  ep_functions_cdiv_inv.c  ep_functions_cmul.c  ep_functions_cmul_inv.c  ep_functions_cpow.c  ep_functions_cpow_inv.c  ep_functions_csub.c  ep_functions_eq.c  ep_functions_exists.c  ep_functions_exists_at.c  ep_functions_geq.c  ep_functions_gt.c  ep_functions_has_right_to_left_precedence.c  ep_functions_is_unary_invert.c  ep_functions_leq.c  ep_functions_lt.c  ep_functions_mod.c  ep_functions_mod_inv.c  ep_functions_neq.c  ep_functions_or.c  ep_functions_scientific.c  ep_functions_scientific_inv.c
src/node/: ep_node.h  ep_node_assign_complex.c  ep_node_assign_complex_ref.c  ep_node_assign_function.c  ep_node_assign_left.c  ep_node_assign_real.c  ep_node_assign_real_ref.c  ep_node_assign_right.c  ep_node_contains_function.c  ep_node_contains_value.c  ep_node_copy_node_recursively.c  ep_node_copy_value.c  ep_node_create.c  ep_node_def.h  ep_node_delete.c  ep_node_eval.c  ep_node_reduce.c  ep_node_replace_recursively_complex_ref.c  ep_node_replace_recursively_real_ref.c  ep_node_reset_children.c
src/stack/: ep_stack.h  ep_stack_create.c  ep_stack_def.h  ep_stack_delete.c  ep_stack_init_head_value.c  ep_stack_init_value.c  ep_stack_is_empty.c  ep_stack_is_head_brace_closed.c  ep_stack_is_head_brace_open.c  ep_stack_is_head_function.c  ep_stack_is_head_value.c  ep_stack_pop.c  ep_stack_pop_head_brace.c  ep_stack_pop_head_function.c  ep_stack_pop_head_value.c  ep_stack_push.c  ep_stack_push_brace_closed.c  ep_stack_push_brace_open.c  ep_stack_push_complex.c  ep_stack_push_complex_ref.c  ep_stack_push_function_by_name.c  ep_stack_push_function_by_ref.c  ep_stack_push_real.c  ep_stack_push_real_ref.c  ep_stack_push_value.c  ep_stack_reverse.c
src/value/: ep_value.h  ep_value_copy.c  ep_value_create.c  ep_value_def.h  ep_value_delete.c  (+12 more)
tests/: exparser_tests.c
(+15 files in other folders)
